# rust-rss-viewer

./: Cargo.toml  README.md
src/: main.rs  main_window.rs  rss_app.rs  rss_feed.rs  rss_item.rs  rss_source.rs  ui.rs  url_utils.rs
src/my_ui/: labels.rs
src/ui/: labels.rs  rss.rs  text.rs
src/ui/rss/: edit_rss_source.rs  rss_source_list.rs
