[package]
name = "rss-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32"
egui = "0.32"
rss = "2"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
webbrowser = "0.8"
